--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -2,32 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="130dp"
+    android:layout_height="130dp"
     android:layout_marginTop="12dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="88dp"
-        android:layout_height="100dp"
+        android:layout_width="131dp"
+        android:layout_height="128dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <View
-            android:id="@+id/onlineView"
-            android:layout_width="10dp"
-            android:layout_height="12dp"
-
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="55dp"
-            android:layout_marginEnd="8dp"
-            android:background="@drawable/round_circle_online_green"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
-            app:layout_constraintStart_toEndOf="@+id/imageCardView"
-            app:layout_constraintTop_toBottomOf="@+id/imageCardView"
-            tools:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -39,27 +25,29 @@
                 android:id="@+id/textView9"
                 android:layout_width="73dp"
                 android:layout_height="18dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="70dp"
+                android:layout_marginLeft="35dp"
+                android:layout_marginTop="100dp"
                 android:text="TextView"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/imageCardView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="11dp"
-            android:layout_marginTop="11dp"
-            app:cardCornerRadius="29dp"
+            android:layout_width="92dp"
+            android:layout_height="93dp"
+            android:layout_marginBottom="30dp"
+            app:cardCornerRadius="55dp"
             app:cardPreventCornerOverlap="false"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <ImageView
                 android:id="@+id/userProfileImage"
-                android:layout_width="58dp"
-                android:layout_height="58dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_margin="0dp"
                 android:layout_marginStart="12dp"
 
