--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -368,6 +368,7 @@
                             android:textColor="#070707"
                             android:textColorHighlight="#CEEC766D"
                             android:textColorHint="#CEEC766D"
+
                             android:textColorLink="#CEEC766D"
                             android:textStyle="bold"
                             tools:ignore="TouchTargetSizeCheck" />
@@ -399,10 +400,11 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/inpoutLastName"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
                         android:textColorHighlight="#CEEC766D"
                         android:textColorLink="#CEEC766D"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+
                         app:boxBackgroundColor="@android:color/transparent"
                         tools:ignore="TouchTargetSizeCheck">
 
@@ -412,6 +414,8 @@
                             android:layout_height="match_parent"
                             android:background="@android:color/transparent"
                             android:hint="LastName"
+                            android:textColorHighlight="#CEEC766D"
+                            android:textColorLink="#CEEC766D"
                             android:textStyle="bold"
                             tools:ignore="TouchTargetSizeCheck" />
                     </com.google.android.material.textfield.TextInputLayout>
@@ -422,7 +426,6 @@
                         android:layout_height="match_parent"
                         android:textColorHighlight="#CEEC766D"
                         android:textColorLink="#CEEC766D"
-
                         app:boxBackgroundColor="@android:color/transparent"
                         tools:ignore="TouchTargetSizeCheck">
 
@@ -479,7 +482,6 @@
                             android:background="@android:color/transparent"
                             android:hint="Phone"
                             android:inputType="number"
-
                             android:textColor="#070707"
                             android:textColorHighlight="#CEEC766D"
                             android:textColorLink="#CEEC766D"
